@W-17354583 fix(form-element): add clear to fix alignment (#5446)
* fix(form-element): add clear to ensure that longer labels are properly aligned

* chore: update release notes

* Update ui/components/form-element/RELEASENOTES.md


* chore: update release notes

---------

--- a/ui/components/form-element/horizontal/_index.scss
+++ b/ui/components/form-element/horizontal/_index.scss
@@ -14,6 +14,7 @@
 .slds-form_horizontal .slds-form-element,
 .slds-form_stacked .slds-form-element_horizontal {
   display: block;
+  clear: both;
 
   &:not(.slds-form-element_readonly) {
     margin-bottom: $spacing-x-small;
